--- a/AskMeAQuestion/Views/Home/Index.cshtml
+++ b/AskMeAQuestion/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
         <div class="container">
             <fieldset>
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-md-12">
                         <div class="intro-message">
                             <h1>Ask Me A Question!</h1>
                             <h3>Please login to continue</h3>
