--- a/AskMeAQuestion/Views/Home/Index.cshtml
+++ b/AskMeAQuestion/Views/Home/Index.cshtml
@@ -16,6 +16,13 @@
         font-style: italic;
         color: lawngreen;
     }
+    span {
+        margin-top: 8px;
+    }
+    .form-input {
+        padding-left: 0px;
+        padding-right: 40px;
+    }
 </style>
 
 @using (Html.BeginForm("Index", "Home", FormMethod.Post, new { enctype = "multi-part/form-data" }))
@@ -40,19 +47,27 @@
                             <hr class="intro-divider" />
                             <ul class="list-unstyled">
                                 <li>
-                                    <span class="glyphicon glyphicon-user"></span>
-                                    @Html.TextBoxFor(x => x.UserName, new { placeholder = "User Name" })
-                                          @Html.ValidationMessageFor(x => x.UserName)
+                                    <div class="row">             
+                                        <span class="col-md-offset-4 col-md-1 glyphicon glyphicon-user"></span>                   
+                                        <div class="col-md-3 form-input">
+                                            @Html.TextBoxFor(x => x.UserName, new { placeholder = "User Name", @class = "form-control" })
+                                            @Html.ValidationMessageFor(x => x.UserName)
+                                        </div>
+                                    </div>
                                 </li>
                                 <li>
-                                    <span class="glyphicon glyphicon-lock"></span>
-                                    @Html.PasswordFor(x => x.Password, new { placeholder = "Password" })
-                                    @Html.ValidationMessageFor(x => x.Password)
+                                    <div class="row">
+                                        <span class="col-md-offset-4 col-md-1 glyphicon glyphicon-lock"></span>
+                                        <div class="col-md-3 form-input">
+                                            @Html.PasswordFor(x => x.Password, new { placeholder = "Password", @class = "form-control" })
+                                            @Html.ValidationMessageFor(x => x.Password)
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <button type="submit" class="btn btn-default">Log in</button>
                                 </li>
                             </ul>
-                        </div>
-                        <div style="display: none;">
-                            <button type="submit" class="btn btn-default">Log in</button>
                         </div>
                     </div>
                 </div>
