--- a/AskMeAQuestion/Views/Home/Register.cshtml
+++ b/AskMeAQuestion/Views/Home/Register.cshtml
@@ -6,42 +6,83 @@
 
 <link href="~/css/landing-page.css" rel="stylesheet">
 <style>
-    li {
-        padding: 8px;
-    }
-
     input {
         color: black;
     }
-
-    a {
-        font-style: italic;
-        color: lawngreen;
+    .control-label {
+        padding-top: 8px;
     }
 </style>
-
-<br />
 
 @using (Html.BeginForm("Register", "Home", FormMethod.Post, new { enctype = "multi-part/form-data" }))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
-
-    <div class="intro-header">
-        <div class="container">
-            <fieldset>
-                <div class="control-group intro-message">
-                    <!-- Username -->
-                    <label class="control-label">@Html.DisplayNameFor(x => x.UserName)</label>
-                    <div class="controls">
-                        @Html.TextBoxFor(x => x.UserName, new { @class = "input-xlarge" })
-                        @Html.ValidationMessageFor(x => x.UserName)
-                        <p class="help-block">Username can contain any letters or numbers, without spaces</p>
-                    </div>
+    
+    <div class="intro-header intro-message">
+        <form class="form-horizontal" role="form">
+            <h1>Registration</h1>
+            <hr class="intro-divider" />
+            <div class="form-group row">
+                <div class="col-md-offset-4 col-md-1 control-label">
+                    @Html.DisplayNameFor(x => x.UserName)
                 </div>
-                            
-            </fieldset>
-        </div>
+                <div class="col-md-2">
+                    @Html.TextBoxFor(x => x.UserName, new { placeholder = "User Name", @class = "form-control"})
+                    @Html.ValidationMessageFor(x => x.UserName)
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-md-offset-4 col-md-1 control-label">
+                    @Html.DisplayNameFor(x => x.Password)
+                </div>
+                <div class="col-md-2">
+                    @Html.PasswordFor(x => x.Password, new { placeholder = "Password", @class = "form-control" })
+                    @Html.ValidationMessageFor(x => x.Password)
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-md-offset-4 col-md-1 control-label">
+                    <label>Confirm</label>
+                </div>
+                <div class="col-md-2">
+                    @Html.PasswordFor(x => x.ConfirmPassword, new { placeholder = "Password", @class = "form-control" })
+                    @Html.ValidationMessageFor(x => x.ConfirmPassword)
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-md-offset-4 col-md-1 control-label">
+                    @Html.DisplayNameFor(x => x.FirstName)
+                </div>
+                <div class="col-md-2">
+                    @Html.TextBoxFor(x => x.FirstName, new { placeholder = "First Name", @class = "form-control" })
+                    @Html.ValidationMessageFor(x => x.FirstName)
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-md-offset-4 col-md-1 control-label">
+                    @Html.DisplayNameFor(x => x.LastName)
+                </div>
+                <div class="col-md-2">
+                    @Html.TextBoxFor(x => x.LastName, new { placeholder = "Last Name", @class = "form-control" })
+                    @Html.ValidationMessageFor(x => x.LastName)
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-md-offset-4 col-md-1 control-label">
+                    @Html.DisplayNameFor(x => x.AccountType)
+                </div>
+                <div class="col-md-2">
+                    @Html.DropDownListFor(x => x.AccountType, new SelectList(Model.AccountTypeList, "Value", "Text"), "--Select--", new { @class = "form-control"})
+                    @Html.ValidationMessageFor(x => x.AccountType)
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">Register</button>
+                </div>
+            </div>
+        </form>
     </div>
 
 }
@@ -53,10 +94,5 @@
         if (errorMessage != "") {
             alert(errorMessage);
         }
-
     });
-
-
 </script>
-
-
