--- a/AskMeAQuestion/Views/Home/UserInterface.cshtml
+++ b/AskMeAQuestion/Views/Home/UserInterface.cshtml
@@ -3,235 +3,261 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<div id="top-nav" class="navbar navbar-inverse navbar-static-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-toggle"></span>
+            </button>
+            <span class="navbar-brand" href="#">Welcome Back, @Model.UserName!</span>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
 
-<h2>Welcome Back, @Model.UserName!</h2><br />
-
-@using (Html.BeginForm("UserInterface", "Home", FormMethod.Post, new { enctype = "multi-part/form-data" }))
-{
-
-@Html.HiddenFor(x => Model.UserId)
-<h4>Course Searcher</h4>
- <div class="row">
-         <div class="col-md-2">
-             @Html.DropDownListFor(x => x.CourseAdded, new SelectList(Model.Courses, "Value", "Text"), "--Select Class--", new { @class = "form-control" })
-             <button type="submit" class="btn btn-default">Add Course</button>
-         </div>
- </div>
-
-}
-@if (Model.UserRole == "2" || Model.UserRole == "Admin")
-{
-    @Html.ActionLink("Create a new course", "CreateCourse", "Home", new { id = Model.UserId }, null);
-}
-
-
-@if (Model.UserCourseList.Count() > 0)
-{
- <br /><br />
-<div class="panel panel-default">
-    <div class="panel-heading"><h4>My Classes</h4></div>
-<table class="table">
-    <tr>
-        <th>
-            Name
-        </th>
-        <th>
-            Designator
-        </th>
-        <th>
-            Professor
-        </th>
-        <th>
-            Current Session
-        </th>
-        <th>
-            Course History
-        </th>
-        @if (Model.UserRole == "2" || Model.UserRole == "Admin")
-        {
-        <th>
-            Class List
-        </th>
-        <th>
-            Settings
-        </th>
-        }
-    </tr>
-    @foreach (var course in Model.UserCourseList)
-    {
-      <tr>
-          <td>
-              @course.CourseName
-          </td>
-          <td>
-              @course.CourseDesignator
-          </td>
-          <td>
-              @course.ProfessorId
-          </td>
-            <td>
-
-                @if ((Model.UserRole == "Admin" || Model.UserRole == "2") && !course.OpenSession)
-                {
-                   @Html.ActionLink("New Session", "CreateSession", "Home", new { id = course.SectionId, userId = Model.UserId}, null)
- 
-                }
-                else if(course.OpenSession) {
-                   @Html.ActionLink("Live Feed", "LiveFeed", "Home", new { id = course.SectionId, userId = Model.UserId}, null)
-
-                }
-                else {
-                    <em>No open session</em>
-                }
-
-          </td>
-          <td>
-              @Html.ActionLink("Course History", "CourseHistory", "Home", new { id = course.SectionId }, null)
-          </td>
-          @if (Model.UserRole == "2" || Model.UserRole == "Admin")
-          {
-          <td>
-              @Html.ActionLink("Class list", "ClassList", "Home", new { courseId = course.SectionId }, null)
-
-          </td>
-          <td>
-
-          </td>
-          }
-      </tr>
-        
-    }
-</table>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">
+                        <i class="glyphicon glyphicon-user"></i> @Model.UserRole <span class="caret"></span>
+                    </a>
+                    <ul id="g-account-menu" class="dropdown-menu" role="menu">
+                        <li><a href="#">My Profile</a></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-lock"></i> Logout</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div><!-- /container -->
 </div>
-}
 
-@if (Model.PendingCourses.Count() > 0 && Model.UserRole == "Admin")
-{
-<br /><br />
-<div class="panel panel-default">
-    <div class="panel-heading"><h4>Pending Courses</h4></div>
-<table class="table">
-    <tr>
-        <th>
-            Name
-        </th>
-        <th>
-            Designator
-        </th>
-        <th>
-            Professor
-        </th>
-        <th>
-            
-        </th>
-        
-    </tr>
-    @foreach (var course in Model.PendingCourses)
+<div class="container">
+    @using (Html.BeginForm("UserInterface", "Home", FormMethod.Post, new { enctype = "multi-part/form-data" }))
     {
-      <tr>
-          <td>
-              @course.CourseName
-          </td>
-          <td>
-              @course.CourseDesignator
-          </td>
-          <td>
-              @course.ProfessorId
-          </td>
-            <td>
-                @Html.ActionLink("Accept", "AcceptCourse", "Home", new { id = course.SectionId, userId = Model.UserId }, null) /
-                @Html.ActionLink("Deny", "DenyCourse", "Home", new { id = course.SectionId, userId = Model.UserId }, null)
 
+        @Html.HiddenFor(x => Model.UserId)
+        <h4>Course Searcher</h4>
+        <div class="row">
+            <div class="col-md-2">
+                @Html.DropDownListFor(x => x.CourseAdded, new SelectList(Model.Courses, "Value", "Text"), "--Select Class--", new { @class = "form-control" })
+            </div>
+            <button type="submit" class="btn btn-default">Add Course</button>
+        </div>
 
-          </td>
-      </tr>
-        
     }
-</table>
-</div>
-}
-@if (Model.PendingStudents.Count() > 0 && (Model.UserRole == "Admin" || Model.UserRole == "2"))
-{
-<br /><br />
-<div class="panel panel-default">
-    <div class="panel-heading"><h4>Pending Students</h4></div>
-<table class="table">
-    <tr>
-        <th>
-            Name
-        </th>
-        <th>
-            UserId
-        </th>
-        <th>
-            Course Name
-        </th>
-        <th>
-            Course Designator
-        </th>
-        <th></th>
-        
-    </tr>
-    @foreach (var course in Model.PendingStudents)
+    @if (Model.UserRole == "2" || Model.UserRole == "Admin")
     {
-      <tr>
-          <td>
-              @course.Name 
-          </td>
-          <td>
-              @course.StudentId
-          </td>
-          <td>
-              @course.CourseName
-          </td>
-            <td>
-                @course.CourseDesignator
-          </td>
-          <td>
-              @Html.ActionLink("Accept", "AcceptStudent", "Home", new { id = course.CourseId, student = course.StudentId, userId = Model.UserId }, null) /
-              @Html.ActionLink("Deny", "DenyStudent", "Home", new { id = course.CourseId, student = course.StudentId, userId = Model.UserId }, null)
-          </td>
-      </tr>
-        
+        @Html.ActionLink("Create a new course", "CreateCourse", "Home", new { id = Model.UserId }, null);
     }
-</table>
-</div>
-}
 
-@if (Model.MyPendingCourses.Count() > 0 && Model.UserRole == "1")
-{
-    <br /><br />
-    <div class="panel panel-default">
-        <div class="panel-heading"><h4>My Pending Courses</h4></div>
-        <table class="table">
-            <tr>
-                <th>
-                    Name
-                </th>
-                <th>
-                    Designator
-                </th>
-                <th>
-                    Professor
-                </th>
 
-            </tr>
-            @foreach (var course in Model.MyPendingCourses)
-            {
+    @if (Model.UserCourseList.Count() > 0)
+    {
+        <br /><br />
+        <div class="panel panel-default">
+            <div class="panel-heading"><h4>My Classes</h4></div>
+            <table class="table">
                 <tr>
-                    <td>
-                        @course.CourseName
-                    </td>
-                    <td>
-                        @course.CourseDesignator
-
-                    </td>
-                    <td>
-                        @course.ProfessorId
-                    </td>
+                    <th>
+                        Name
+                    </th>
+                    <th>
+                        Designator
+                    </th>
+                    <th>
+                        Professor
+                    </th>
+                    <th>
+                        Current Session
+                    </th>
+                    <th>
+                        Course History
+                    </th>
+                    @if (Model.UserRole == "2" || Model.UserRole == "Admin")
+                    {
+                        <th>
+                            Class List
+                        </th>
+                        <th>
+                            Settings
+                        </th>
+                    }
                 </tr>
+                @foreach (var course in Model.UserCourseList)
+                {
+                    <tr>
+                        <td>
+                            @course.CourseName
+                        </td>
+                        <td>
+                            @course.CourseDesignator
+                        </td>
+                        <td>
+                            @course.ProfessorId
+                        </td>
+                        <td>
 
-            }
-        </table>
-    </div>
-}
+                            @if ((Model.UserRole == "Admin" || Model.UserRole == "2") && !course.OpenSession)
+                            {
+                                @Html.ActionLink("New Session", "CreateSession", "Home", new { id = course.SectionId, userId = Model.UserId }, null)
+
+                            }
+                            else if (course.OpenSession)
+                            {
+                                @Html.ActionLink("Live Feed", "LiveFeed", "Home", new { id = course.SectionId, userId = Model.UserId }, null)
+
+                            }
+                            else
+                            {
+                                <em>No open session</em>
+                            }
+
+                        </td>
+                        <td>
+                            @Html.ActionLink("Course History", "CourseHistory", "Home", new { id = course.SectionId }, null)
+                        </td>
+                        @if (Model.UserRole == "2" || Model.UserRole == "Admin")
+                        {
+                            <td>
+                                @Html.ActionLink("Class list", "ClassList", "Home", new { courseId = course.SectionId }, null)
+
+                            </td>
+                            <td></td>
+                        }
+                    </tr>
+
+                }
+            </table>
+        </div>
+    }
+
+
+
+    @if (Model.PendingCourses.Count() > 0 && Model.UserRole == "Admin")
+    {
+        <br /><br />
+        <div class="panel panel-default">
+            <div class="panel-heading"><h4>Pending Courses</h4></div>
+            <table class="table">
+                <tr>
+                    <th>
+                        Name
+                    </th>
+                    <th>
+                        Designator
+                    </th>
+                    <th>
+                        Professor
+                    </th>
+                    <th>
+
+                    </th>
+
+                </tr>
+                @foreach (var course in Model.PendingCourses)
+                {
+                    <tr>
+                        <td>
+                            @course.CourseName
+                        </td>
+                        <td>
+                            @course.CourseDesignator
+                        </td>
+                        <td>
+                            @course.ProfessorId
+                        </td>
+                        <td>
+                            @Html.ActionLink("Accept", "AcceptCourse", "Home", new { id = course.SectionId, userId = Model.UserId }, null) /
+                            @Html.ActionLink("Deny", "DenyCourse", "Home", new { id = course.SectionId, userId = Model.UserId }, null)
+
+
+                        </td>
+                    </tr>
+
+                }
+            </table>
+        </div>
+    }
+    @if (Model.PendingStudents.Count() > 0 && (Model.UserRole == "Admin" || Model.UserRole == "2"))
+    {
+        <br /><br />
+        <div class="panel panel-default">
+            <div class="panel-heading"><h4>Pending Students</h4></div>
+            <table class="table">
+                <tr>
+                    <th>
+                        Name
+                    </th>
+                    <th>
+                        UserId
+                    </th>
+                    <th>
+                        Course Name
+                    </th>
+                    <th>
+                        Course Designator
+                    </th>
+                    <th></th>
+
+                </tr>
+                @foreach (var course in Model.PendingStudents)
+                {
+                    <tr>
+                        <td>
+                            @course.Name
+                        </td>
+                        <td>
+                            @course.StudentId
+                        </td>
+                        <td>
+                            @course.CourseName
+                        </td>
+                        <td>
+                            @course.CourseDesignator
+                        </td>
+                        <td>
+                            @Html.ActionLink("Accept", "AcceptStudent", "Home", new { id = course.CourseId, student = course.StudentId, userId = Model.UserId }, null) /
+                            @Html.ActionLink("Deny", "DenyStudent", "Home", new { id = course.CourseId, student = course.StudentId, userId = Model.UserId }, null)
+                        </td>
+                    </tr>
+
+                }
+            </table>
+        </div>
+    }
+
+    @if (Model.MyPendingCourses.Count() > 0 && Model.UserRole == "1")
+    {
+        <br /><br />
+        <div class="panel panel-default">
+            <div class="panel-heading"><h4>My Pending Courses</h4></div>
+            <table class="table">
+                <tr>
+                    <th>
+                        Name
+                    </th>
+                    <th>
+                        Designator
+                    </th>
+                    <th>
+                        Professor
+                    </th>
+
+                </tr>
+                @foreach (var course in Model.MyPendingCourses)
+                {
+                    <tr>
+                        <td>
+                            @course.CourseName
+                        </td>
+                        <td>
+                            @course.CourseDesignator
+
+                        </td>
+                        <td>
+                            @course.ProfessorId
+                        </td>
+                    </tr>
+
+                }
+            </table>
+        </div>
+    }
+</div>
