--- a/AskMeAQuestion/Views/Shared/_Layout.cshtml
+++ b/AskMeAQuestion/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @*<link href="@Url.Content("~/Content/cmich_styles.css")" rel="stylesheet" type="text/css" />*@
