--- a/AskMeAQuestion/Views/Home/Index.cshtml
+++ b/AskMeAQuestion/Views/Home/Index.cshtml
@@ -9,19 +9,18 @@
     li {
         padding: 8px;
     }
+
     input {
         color: black;
     }
+
     a {
         font-style: italic;
         color: lawngreen;
     }
+
     span {
         margin-top: 8px;
-    }
-    .form-input {
-        padding-left: 0px;
-        padding-right: 40px;
     }
 </style>
 
@@ -30,49 +29,35 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
-    <div class="intro-header">
-        <div class="container">
+    <div class="container">
             <fieldset>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="intro-message">
-                            <h1>Ask Me A Question!</h1>
-                            <h3>Please login to continue</h3>
-                            <div>
-                                <p>
-                                    No account yet?
-                                    @Html.ActionLink("Register here!", "Register", "Home")
-                                </p>
-                            </div>
-                            <hr class="intro-divider" />
-                            <ul class="list-unstyled">
-                                <li>
-                                    <div class="row">             
-                                        <span class="col-md-offset-4 col-md-1 glyphicon glyphicon-user"></span>                   
-                                        <div class="col-md-3 form-input">
-                                            @Html.TextBoxFor(x => x.UserName, new { placeholder = "User Name", @class = "form-control" })
-                                            @Html.ValidationMessageFor(x => x.UserName)
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="row">
-                                        <span class="col-md-offset-4 col-md-1 glyphicon glyphicon-lock"></span>
-                                        <div class="col-md-3 form-input">
-                                            @Html.PasswordFor(x => x.Password, new { placeholder = "Password", @class = "form-control" })
-                                            @Html.ValidationMessageFor(x => x.Password)
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <button type="submit" class="btn btn-default">Log in</button>
-                                </li>
-                            </ul>
+                <div class="intro-header intro-message">
+                    <h1>Ask Me A Question!</h1>
+                    <h3>Please login to continue</h3>
+                    <div>
+                        <p>
+                            No account yet?
+                            @Html.ActionLink("Register here!", "Register", "Home")
+                        </p>
+                    </div>
+                    <hr class="intro-divider" />
+                    <div class="form-group row">
+                        <span class="col-md-offset-4 col-md-1 glyphicon glyphicon-user"></span>
+                        <div class="col-md-3 form-input">
+                            @Html.TextBoxFor(x => x.UserName, new { placeholder = "User Name", @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.UserName)
                         </div>
                     </div>
+                    <div class="form-group row">
+                        <span class="col-md-offset-4 col-md-1 glyphicon glyphicon-lock"></span>
+                        <div class="col-md-3 form-input">
+                            @Html.PasswordFor(x => x.Password, new { placeholder = "Password", @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.Password)
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-default">Log in</button>
                 </div>
             </fieldset>
-        </div>
     </div>
 }
 
