--- a/AskMeAQuestion/Views/Home/Register.cshtml
+++ b/AskMeAQuestion/Views/Home/Register.cshtml
@@ -5,10 +5,11 @@
 }
 
 <link href="~/css/landing-page.css" rel="stylesheet">
-<style>
+<style type="text/css">
     input {
         color: black;
     }
+
     .control-label {
         padding-top: 8px;
     }
@@ -18,73 +19,79 @@
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
-    
-    <div class="intro-header intro-message">
-        <form class="form-horizontal" role="form">
-            <h1>Registration</h1>
-            <hr class="intro-divider" />
-            <div class="form-group row">
-                <div class="col-md-offset-4 col-md-1 control-label">
-                    @Html.DisplayNameFor(x => x.UserName)
-                </div>
-                <div class="col-md-2">
-                    @Html.TextBoxFor(x => x.UserName, new { placeholder = "User Name", @class = "form-control"})
-                    @Html.ValidationMessageFor(x => x.UserName)
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-md-offset-4 col-md-1 control-label">
-                    @Html.DisplayNameFor(x => x.Password)
-                </div>
-                <div class="col-md-2">
-                    @Html.PasswordFor(x => x.Password, new { placeholder = "Password", @class = "form-control" })
-                    @Html.ValidationMessageFor(x => x.Password)
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-md-offset-4 col-md-1 control-label">
-                    <label>Confirm</label>
-                </div>
-                <div class="col-md-2">
-                    @Html.PasswordFor(x => x.ConfirmPassword, new { placeholder = "Password", @class = "form-control" })
-                    @Html.ValidationMessageFor(x => x.ConfirmPassword)
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-md-offset-4 col-md-1 control-label">
-                    @Html.DisplayNameFor(x => x.FirstName)
-                </div>
-                <div class="col-md-2">
-                    @Html.TextBoxFor(x => x.FirstName, new { placeholder = "First Name", @class = "form-control" })
-                    @Html.ValidationMessageFor(x => x.FirstName)
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-md-offset-4 col-md-1 control-label">
-                    @Html.DisplayNameFor(x => x.LastName)
-                </div>
-                <div class="col-md-2">
-                    @Html.TextBoxFor(x => x.LastName, new { placeholder = "Last Name", @class = "form-control" })
-                    @Html.ValidationMessageFor(x => x.LastName)
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-md-offset-4 col-md-1 control-label">
-                    @Html.DisplayNameFor(x => x.AccountType)
-                </div>
-                <div class="col-md-2">
-                    @Html.DropDownListFor(x => x.AccountType, new SelectList(Model.AccountTypeList, "Value", "Text"), "--Select--", new { @class = "form-control"})
-                    @Html.ValidationMessageFor(x => x.AccountType)
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default">Register</button>
-                </div>
-            </div>
-        </form>
-    </div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-md-1">
+                <a href="~/"><span class="glyphicon glyphicon-circle-arrow-left back" /></a>
+            </div>
+        </div>
+        <div class="intro-header intro-message">
+            <form class="form-horizontal" role="form">
+                <h1>Registration</h1>
+                <hr class="intro-divider" />
+                <div class="form-group row">
+                    <div class="col-md-offset-3 col-md-2 control-label">
+                        @Html.DisplayNameFor(x => x.UserName)
+                    </div>
+                    <div class="col-md-3">
+                        @Html.TextBoxFor(x => x.UserName, new { placeholder = "User Name", @class = "form-control" })
+                        @Html.ValidationMessageFor(x => x.UserName)
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-md-offset-3 col-md-2 control-label">
+                        @Html.DisplayNameFor(x => x.Password)
+                    </div>
+                    <div class="col-md-3">
+                        @Html.PasswordFor(x => x.Password, new { placeholder = "Password", @class = "form-control" })
+                        @Html.ValidationMessageFor(x => x.Password)
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-md-offset-3 col-md-2 control-label">
+                        <label>Confirm</label>
+                    </div>
+                    <div class="col-md-3">
+                        @Html.PasswordFor(x => x.ConfirmPassword, new { placeholder = "Password", @class = "form-control" })
+                        @Html.ValidationMessageFor(x => x.ConfirmPassword)
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-md-offset-3 col-md-2 control-label">
+                        @Html.DisplayNameFor(x => x.FirstName)
+                    </div>
+                    <div class="col-md-3">
+                        @Html.TextBoxFor(x => x.FirstName, new { placeholder = "First Name", @class = "form-control" })
+                        @Html.ValidationMessageFor(x => x.FirstName)
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-md-offset-3 col-md-2 control-label">
+                        @Html.DisplayNameFor(x => x.LastName)
+                    </div>
+                    <div class="col-md-3">
+                        @Html.TextBoxFor(x => x.LastName, new { placeholder = "Last Name", @class = "form-control" })
+                        @Html.ValidationMessageFor(x => x.LastName)
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-md-offset-3 col-md-2 control-label">
+                        @Html.DisplayNameFor(x => x.AccountType)
+                    </div>
+                    <div class="col-md-3">
+                        @Html.DropDownListFor(x => x.AccountType, new SelectList(Model.AccountTypeList, "Value", "Text"), "--Select--", new { @class = "form-control" })
+                        @Html.ValidationMessageFor(x => x.AccountType)
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <button type="submit" class="btn btn-default">Register</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 }
 
 <script type="text/javascript">
