--- a/AskMeAQuestion/Views/Shared/_NavBar.cshtml
+++ b/AskMeAQuestion/Views/Shared/_NavBar.cshtml
@@ -1,4 +1,5 @@
-﻿<div id="top-nav" class="navbar navbar-inverse navbar-static-top">
+﻿
+<div id="top-nav" class="navbar navbar-inverse navbar-static-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -14,8 +15,8 @@
                         <i class="glyphicon glyphicon-user"></i> @Model.UserRole <span class="caret"></span>
                     </a>
                     <ul id="g-account-menu" class="dropdown-menu" role="menu">
-                        <li><a href="#">My Profile</a></li>
-                        <li><a href="~/"><i class="glyphicon glyphicon-lock"></i> Logout</a></li>
+                        <li>@Html.ActionLink("My profile", "UserInterface", "Home", new { userId = Model.UserId }, null)</li>
+                        <li><a href=""><i class="glyphicon glyphicon-lock"></i> Logout</a></li>
                     </ul>
                 </li>
             </ul>
