--- a/AskMeAQuestion/Views/Home/LiveFeed.cshtml
+++ b/AskMeAQuestion/Views/Home/LiveFeed.cshtml
@@ -62,11 +62,9 @@
         <ul id="pastQuestions" class="list-group" style="display:none">
                 @foreach (var question in Model.CurrentSession.Questions)
                 {
-                   
-                    <li class="list-group-item">@question</li>
+                    <li class="list-group-item">@question.Upvotes <i class="glyphicon glyphicon-arrow-up"></i> <strong>@question.Submitter</strong><em> asked </em> @question.Question</li>
                 }
             </ul>
-            
     }
 
     <div class="row col-md-6">
@@ -110,7 +108,7 @@
         };
 
         $("#sessionHistory").click(function () {
-            $("#pastQuestions").show();
+            $("#pastQuestions").slideToggle();
         });
         // Get the user name and store it to prepend to messages.
 
@@ -127,7 +125,7 @@
         $.connection.hub.start().done(function () {
             $('#sendmessage').click(function () {
                 // Call the Send method on the hub.
-                chat.server.send($('#displayname').val(), $('#message').val(), '@Model.CourseDesignator');
+                chat.server.send('@Model.UserId', $('#message').val(), '@Model.CourseDesignator');
                 // Clear text box and reset focus for next comment.
                 $('#message').val('').focus();
             });
